<resources>
    <string name="app_name">evergreen</string>
    <string name="uid_or_email">Mobile Number</string>
    <string name="channel_name">Evergreen Notifications</string>
    <string name="channel_description">Notifications for Evergreen app</string>
    <string name="hello_there_sign_in_to_continue">Hello there, sign in to continue!</string>
    <string name="login">Login</string>
    <string name="remeber_me">Remember Me</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_in">Sign in</string>
    <string name="copyright_panaceaitservices_2023_all_rights_reserved">© Copyright PanaceaItservices 2023 | All Rights Reserved.</string>
    <string name="pasword">Password</string>
    <string name="email_address">Email Address</string>
    <string name="registration">Registration</string>
    <string name="please_enter_the_verification_code">Please enter the verification code</string>
    <string name="name">Name</string>
    <string name="enter_name_of_technician">Enter name of technician</string>
    <string name="mobile_number">Enter Mobile number</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="email">Email</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="password">password</string>
    <string name="enter_password">Enter password</string>
    <string name="please_selcte_amc">Please selcte AMC</string>
    <string name="assign_to_amc">Assign to AMC</string>
    <string name="create_technician">Create Technician</string>
    <string name="choose_amc">Create Company</string>
    <string name="enter_name">Enter name</string>
    <string name="companies_list">Companies List</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="menu">menu</string>
    <string name="desc">descripton</string>
    <string name="negative">Cancel</string>
    <string name="positive">ok</string>

    <string-array name="issue_types">
        <item>Select Issue Type</item>
        <item>service</item>
        <item>repair</item>
        <item>Issue Type 3</item>
        <!-- Add more items as needed -->
    </string-array>


    <string-array name="type_reason">
        <item>Select Issue Type</item>
        <item>Spare Parts required</item>
        <item>expert service required</item>
    </string-array>

    <array name="autosize_text_sizes">
        <item>10sp</item>
        <item>9sp</item>
        <item>12sp</item>
        <item>13sp</item>
        <item>14sp</item>

    </array>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>