<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    app:cardBackgroundColor="#F9FCFF"
    android:layout_marginTop="@dimen/_20sdp"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/_5sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
       android:layout_marginHorizontal="@dimen/_10sdp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textColor="@color/black_blue"
            android:fontFamily="@font/roboto_medium"
            android:textSize="@dimen/_14ssp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            android:text="Client Detals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/gray1"
            android:fontFamily="@font/roboto_regular"
            android:textSize="@dimen/_14ssp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/poc_name"
            android:fontFamily="@font/roboto_medium"
            android:textSize="@dimen/_16sdp"
            android:textColorHint="@color/gray2"
            android:textColor="@color/black_blue"
            android:layout_marginTop="@dimen/_2sdp"
            android:paddingHorizontal="@dimen/_10sdp"
            android:hint="@string/enter_name"
            android:background="@drawable/edit_text_background"
            app:layout_constraintTop_toBottomOf="@+id/text_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:textColor="@color/gray1"
            android:fontFamily="@font/roboto_regular"
            android:textSize="@dimen/_14ssp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/mobile_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/poc_number"
            android:fontFamily="@font/roboto_medium"
            android:textSize="@dimen/_16sdp"
            android:textColorHint="@color/gray2"
            android:textColor="@color/black_blue"
            android:layout_marginTop="@dimen/_2sdp"
            android:paddingHorizontal="@dimen/_10sdp"
            android:hint="@string/enter_mobile_number"
            android:background="@drawable/edit_text_background"
            app:layout_constraintTop_toBottomOf="@+id/text_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            android:textColor="@color/gray1"
            android:fontFamily="@font/roboto_regular"
            android:textSize="@dimen/_14ssp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/poc_mail"
            android:fontFamily="@font/roboto_medium"
            android:textSize="@dimen/_16sdp"
            android:textColorHint="@color/gray2"
            android:textColor="@color/black_blue"
            android:layout_marginTop="@dimen/_2sdp"
            android:paddingHorizontal="@dimen/_10sdp"
            android:hint="@string/enter_email_address"
            android:background="@drawable/edit_text_background"
            app:layout_constraintTop_toBottomOf="@+id/text_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:textColor="@color/gray1"
            android:fontFamily="@font/roboto_regular"
            android:textSize="@dimen/_14ssp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/site_pswd"
            android:fontFamily="@font/roboto_medium"
            android:textSize="@dimen/_16ssp"
            android:textColorHint="@color/gray2"
            android:textColor="@color/black_blue"
            android:layout_marginTop="@dimen/_2sdp"
            android:paddingHorizontal="@dimen/_10sdp"
            android:hint="@string/enter_password"
            android:background="@drawable/edit_text_background"
            app:layout_constraintTop_toBottomOf="@+id/text_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"/>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>