<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/kitechn_back"
    android:layout_height="match_parent"
    tools:context=".activities.CreateTechnician">
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            app:layout_constraintGuide_percent="0.1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />
        <LinearLayout
            android:background="@drawable/top_rounded_corners"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/guideline"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_height="match_parent">

                <TextView
                    android:textColor="@color/black_blue"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="@dimen/_18ssp"
                    android:id="@+id/text1"
                    android:layout_marginTop="@dimen/_20sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/registration"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textSize="@dimen/_10ssp"
                    android:textColor="#7A869A"
                    android:fontFamily="@font/roboto_regular"
                    android:id="@+id/text2"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/please_enter_the_verification_code"
                    app:layout_constraintTop_toBottomOf="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <androidx.core.widget.NestedScrollView
                    app:layout_constraintTop_toBottomOf="@+id/text2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_marginTop="@dimen/_2sdp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:textColor="@color/gray1"
                            android:fontFamily="@font/roboto_regular"
                            android:textSize="@dimen/_12ssp"
                            android:layout_marginTop="@dimen/_20sdp"
                            app:layout_constraintStart_toStartOf="parent"
                            android:text="@string/name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <EditText
                            android:fontFamily="@font/roboto_medium"
                            android:textSize="@dimen/_14ssp"
                            android:textColor="@color/black_blue"
                            android:layout_marginTop="@dimen/_2sdp"
                            android:paddingHorizontal="@dimen/_10sdp"
                            android:hint="@string/enter_name_of_technician"
                            android:background="@drawable/edit_text_background"
                            app:layout_constraintTop_toBottomOf="@+id/text_email"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:inputType="textEmailAddress"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:textColor="@color/gray1"
                            android:fontFamily="@font/roboto_regular"
                            android:textSize="@dimen/_12ssp"
                            android:layout_marginTop="@dimen/_10sdp"
                            app:layout_constraintStart_toStartOf="parent"
                            android:text="@string/mobile_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <EditText
                            android:fontFamily="@font/roboto_medium"
                            android:textSize="@dimen/_14ssp"
                            android:textColor="@color/black_blue"
                            android:layout_marginTop="@dimen/_2sdp"
                            android:paddingHorizontal="@dimen/_10sdp"
                            android:hint="@string/enter_mobile_number"
                            android:background="@drawable/edit_text_background"
                            app:layout_constraintTop_toBottomOf="@+id/text_email"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:inputType="textEmailAddress"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />


                        <TextView
                            android:textColor="@color/gray1"
                            android:fontFamily="@font/roboto_regular"
                            android:textSize="@dimen/_12ssp"
                            android:layout_marginTop="@dimen/_10sdp"
                            app:layout_constraintStart_toStartOf="parent"
                            android:text="@string/email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <EditText
                            android:fontFamily="@font/roboto_medium"
                            android:autofillHints="emailAddress"
                            android:textSize="@dimen/_14ssp"
                            android:textColor="@color/black_blue"
                            android:layout_marginTop="@dimen/_2sdp"
                            android:paddingHorizontal="@dimen/_10sdp"
                            android:hint="@string/enter_email_address"
                            android:background="@drawable/edit_text_background"
                            app:layout_constraintTop_toBottomOf="@+id/text_email"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:inputType="textEmailAddress"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:textColor="@color/gray1"
                            android:fontFamily="@font/roboto_regular"
                            android:textSize="@dimen/_12ssp"
                            android:layout_marginTop="@dimen/_20sdp"
                            app:layout_constraintStart_toStartOf="parent"
                            android:text="@string/password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <EditText
                            android:fontFamily="@font/roboto_medium"
                            android:textSize="@dimen/_14ssp"
                            android:textColor="@color/black_blue"
                            android:layout_marginTop="@dimen/_2sdp"
                            android:paddingHorizontal="@dimen/_10sdp"
                            android:hint="@string/enter_password"
                            android:background="@drawable/edit_text_background"
                            app:layout_constraintTop_toBottomOf="@+id/text_email"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:inputType="textEmailAddress"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:textColor="@color/gray1"
                            android:fontFamily="@font/roboto_regular"
                            android:textSize="@dimen/_12ssp"
                            android:layout_marginTop="@dimen/_20sdp"
                            app:layout_constraintStart_toStartOf="parent"
                            android:text="@string/assign_to_amc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <EditText
                            android:fontFamily="@font/roboto_medium"
                            android:drawablePadding="@dimen/_5sdp"
                            android:drawableEnd="@drawable/arrow_down"
                            android:textSize="@dimen/_14ssp"
                            android:textColor="@color/black_blue"
                            android:layout_marginTop="@dimen/_2sdp"
                            android:paddingHorizontal="@dimen/_10sdp"
                            android:hint="@string/please_selcte_amc"
                            android:background="@drawable/edit_text_background"
                            app:layout_constraintTop_toBottomOf="@+id/text_email"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:inputType="textEmailAddress"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />





                        <com.google.android.material.card.MaterialCardView
                            app:cardBackgroundColor="@color/btn_back"
                            android:text="@string/sign_in"
                            android:id="@+id/verify_btn"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:textSize="@dimen/_14ssp"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp">
                            <TextView
                                android:fontFamily="@font/roboto_medium"
                                android:gravity="center"
                                android:textSize="@dimen/_14ssp"
                                android:layout_gravity="center"
                                android:textColor="@color/white"
                                android:text="@string/create_technician"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                        </com.google.android.material.card.MaterialCardView>


                        <TextView
                            android:layout_marginTop="@dimen/_20sdp"
                            android:textColor="@color/black_blue"
                            android:textSize="@dimen/_8ssp"
                            android:fontFamily="@font/roboto_regular"
                            android:textAlignment="center"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:text="@string/copyright_panaceaitservices_2023_all_rights_reserved"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_10sdp"/>

                    </LinearLayout>
                </androidx.core.widget.NestedScrollView>







            </LinearLayout>

        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>