<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/kitechn_back"
    android:layout_height="match_parent"
    tools:context=".activities.ForgotPassword">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        app:layout_constraintGuide_percent="0.25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />
    <LinearLayout
        android:weightSum="2"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:layout_weight="1"
            android:gravity="bottom"
            android:fontFamily="@font/pgf"
            android:textSize="@dimen/_30ssp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:text="EVER GREEN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="top|center"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:textAlignment="center"
            android:fontFamily="@font/roboto_medium"
            android:textSize="@dimen/_16ssp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:text="We fix it all! Your one-stop shop for all your kitchen equipment repair needs."
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/top_rounded_corners"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_height="match_parent">

            <TextView
                android:textColor="@color/black_blue"
                android:fontFamily="@font/roboto_bold"
                android:textSize="@dimen/_22ssp"
                android:id="@+id/text1"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintStart_toStartOf="parent"
                android:text="Reset Password"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:textSize="@dimen/_12ssp"
                android:textColor="#7A869A"
                android:fontFamily="@font/roboto_regular"
                android:id="@+id/text2"
                android:lineSpacingExtra="2.0dp"
                android:layout_marginTop="@dimen/_5sdp"
                app:layout_constraintStart_toStartOf="parent"
                android:text="Don’t worry! Just fill in your email and\ngenerate OTP to reset your password."
                app:layout_constraintTop_toBottomOf="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/gray1"
                android:fontFamily="@font/roboto_regular"
                android:textSize="@dimen/_14ssp"
                android:id="@+id/text_email"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/uid_or_email"
                app:layout_constraintTop_toBottomOf="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RelativeLayout
                android:layout_marginTop="@dimen/_5sdp"
                android:id="@+id/relative_card"
                app:layout_constraintTop_toBottomOf="@+id/text_email"
                android:background="@drawable/edit_text_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageViewPrefix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/mobile_phone"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="2dp"/>

                <EditText
                    android:textColor="@color/black_blue"
                    android:fontFamily="@font/roboto_medium"
                    android:background="@null"
                    android:id="@+id/editTextTextEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/imageViewPrefix"
                    android:layout_marginStart="4dp"
                    android:hint="@string/mobile_number"
                    android:inputType="phone"
                    android:textSize="14sp"
                   android:paddingVertical="@dimen/_15sdp"
                    android:autofillHints="phone"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>



            <com.google.android.material.card.MaterialCardView
                app:cardBackgroundColor="@color/btn_back"
                android:id="@+id/card_get_otp"
                android:layout_marginTop="@dimen/_20sdp"
                app:cardCornerRadius="@dimen/_6sdp"
                app:layout_constraintTop_toBottomOf="@+id/relative_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:padding="@dimen/_14sdp"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:textSize="@dimen/_18ssp"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:text="Submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.card.MaterialCardView>


            <TextView
                android:textColor="@color/black_blue"
                android:textSize="@dimen/_10ssp"
                android:fontFamily="@font/roboto_regular"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/copyright_panaceaitservices_2023_all_rights_reserved"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>